--- a/cardapio/style.css
+++ b/cardapio/style.css
@@ -1,6 +1,6 @@
 
 *{
-    font-family: "Poetsen One", sans-serif;
+    font-family: "Freeman", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -383,7 +383,7 @@ a:hover {
 #hamburgueres{
 
     position: relative;
-    right: 322px;
+    right: 0px;
     margin-top: 55px;
 }
 
@@ -392,29 +392,29 @@ a:hover {
     display: flex;
     gap: 25px;
     font-weight: bolder;
-    border: 1px solid;
-    padding: 5px 131px;
+    border: 1px solid rgb(221, 221, 221);
+    padding: 3px 35px;
     border-radius: 8px;
 }
 
 #pizza{
 
     position: relative;
-    right: 322px;
+    right: 0px;
     
 }
 
 #batata_frita{
 
     position: relative;
-    right: 322px;
+    right: 0px;
    
 }
 
 #bebidas{
 
     position: relative;
-    right: 322px;
+    right: 0px;
   
 }
 
@@ -427,5 +427,14 @@ a:hover {
     left: 28px;
     
 
+}
+
+.menu-link{
+
+    border-right: 1px solid #ddd;
+    padding-right: 29px;
+    padding-left: 1px;
+    
+    
 }
 
