--- a/docs/style.css
+++ b/docs/style.css
@@ -144,7 +144,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    padding: 20px;
+    padding: 15px;
     width: 1000px;
 }
 
@@ -385,6 +385,10 @@ a:hover {
     position: relative;
     right: 0px;
     margin-top: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .link-container{
@@ -402,12 +406,19 @@ a:hover {
     position: relative;
     right: 0px;
     
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #batata_frita{
 
     position: relative;
     right: 0px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
    
 }
 
@@ -415,6 +426,10 @@ a:hover {
 
     position: relative;
     right: 0px;
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
   
 }
 
@@ -436,5 +451,94 @@ a:hover {
     padding-left: 1px;
     
     
+}
+
+.gridProducts {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.gridProductsImage {
+    width: 100px;
+}
+
+.gridProductsSpace {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.botaoAdicionar {
+    cursor: pointer;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.popup-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 32px;
+    border: 1px solid #888;
+    width: 18%;
+    position: relative;
+    left: 0px;
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.imagempopup {
+    position: relative;
+    left: -34px;
+    width: 305px;
+    top: 38px;
+}
+
+
+
+
+.sticky-element {
+    display: flex;
+    padding: 0px;
+    transition: all 0.3s ease 0s;
+    align-items: center;
+    justify-content: center;
+}
+
+.sticky-element.sticky {
+    position: fixed;
+    top: -45px;
+    width: 100%;
+    z-index: 1000;
+    background-color: #F1F1F1;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    left: 0px;
 }
 
