--- a/docs/style.css
+++ b/docs/style.css
@@ -2,9 +2,8 @@
 *{
     font-family: "Freeman", sans-serif;
     box-sizing: border-box;
-    background-color: #F1F1F1;
-    touch-action:manipulation ;
-
+    background-color: #ffffff;
+    touch-action: manipulation;
 }
 
 img {
@@ -259,6 +258,7 @@ footer {
 
 .gridProductsImage {
     margin-right: 16px;
+    background-color: transparent;
 }
 
 a {
@@ -358,20 +358,20 @@ a:hover {
     position: relative;
     right: 0px;
     display: flex;
-    align-items: center;
+    align-items: center; 
     justify-content: center;
+    margin-top: -10px;
 
 }
 
 .link-container{
+    margin-top: 45px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    display: grid;
-    border-radius: 11px;
-    padding: 5px;
-    border: 1px solid #ddd;
+    gap: 25px;
+    font-weight: bolder;
+    border: 1px solid rgb(221, 221, 221);
+    padding: 3px 35px;
+    border-radius: 8px;
 }
     
 .menu-link {
@@ -501,11 +501,12 @@ a:hover {
     transition: all 0.3s ease 0s;
     align-items: center;
     justify-content: center;
+    margin-top: -25px;
 }
 
 .sticky-element.sticky {
     position: fixed;
-    top: 0px;
+    top: -45px;
     width: 100%;
     z-index: 1000;
     background-color: #F1F1F1;
@@ -624,7 +625,7 @@ span.close {
 
 
 #closeCartPopup { 
-    background-image: url(icons8-close-48.png);
+    background-image: url(assets/icons8-close-48.png);
     background-size: cover;
     display: inline-block;
     width: 24px;
