--- a/docs/style.css
+++ b/docs/style.css
@@ -3,9 +3,7 @@
     font-family: "Freeman", sans-serif;
     box-sizing: border-box;
     background-color: #ffffff;
-    touch-action: manipulation;
-    margin-top: -1px;
-   
+    touch-action: manipulation;   
 }
 
 img {
@@ -15,7 +13,6 @@ img {
 
 .textoPorCima{
     display: flex;
-    position: relative;
     justify-content: center;
     align-items: center;
     
@@ -65,7 +62,19 @@ img {
     height: 32px;
     position: relative;
     left: 10px;
+    cursor: pointer;
+}
 
+.descriptionInfo {
+    font-size: 12px;
+    line-height: 1.2 !important;
+    line-break: anywhere;
+    text-align: left;
+    font-weight: 300;
+    word-break: break-word;
+    text-transform: lowercase;
+    color: #65181880;
+    text-align: center;
 }
 
 .share {
@@ -73,7 +82,12 @@ img {
     height: 32px;
     position: relative;
     left: 13px;
-
+    cursor: pointer;
+    background: transparent;
+}
+.share.changed {
+    transition: background-color 0.3s ease;
+    background-color: #c2a710;
 }
 
 .buttonVerMapa {
@@ -92,6 +106,14 @@ img {
 
 .buttonVerMapa:hover {
     background-color: #45a049;
+}
+
+.insideButtonVerMapa {
+    color: #ffffff;
+}
+
+.insideButtonVerMapa:hover {
+    color: #ffffff;
 }
 
 .estiloButton {
@@ -134,7 +156,7 @@ main {
 .displayFlexUl {
     list-style-type: none;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
     padding: 15px;
     width: 100%;
@@ -270,6 +292,7 @@ a {
     font-size: 22px;
     text-decoration: none;
     color: #a06d6d;
+    background: transparent;
 }
 
 
@@ -292,7 +315,7 @@ a:hover {
 }
 
 .cart-popup-content {
-    background-color: #fefefe;
+    background-color: #ffffff;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -301,24 +324,6 @@ a:hover {
     position: relative;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     border-radius: 10px;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
 }
 
 #cartItems {
@@ -371,6 +376,8 @@ a:hover {
 }
 
 .link-container{
+    justify-content: center;
+    align-items: center;
     margin-top: 45px;
     display: flex;
     gap: 25px;
@@ -382,9 +389,11 @@ a:hover {
     
 .menu-link {
     
-    padding-right: 35px;
+    padding-right: 0px;
     padding-left: 0px;
+    
 }
+
 
 #pizza{
 
@@ -396,7 +405,7 @@ a:hover {
     justify-content: center;
 }
 
-#batata_frita{
+#salgados{
 
     position: relative;
     right: 0px;
@@ -431,7 +440,7 @@ a:hover {
 
 
 .gridProducts {
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     padding: 20px;
     border: 1px solid #ddd;
     cursor: pointer;
@@ -476,30 +485,12 @@ a:hover {
     left: 0px;
 }
 
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 .imagempopup {
     position: relative;
     left: -34px;
     width: 305px;
     top: 38px;
 }
-
-
-
 
 .sticky-element {
     display: flex;
@@ -536,7 +527,7 @@ a:hover {
 
 .modal-content {
 
-    background-color: #f1F1F1;
+    background-color: #ffffff;
     margin: auto;
     margin-top: 120px;
     padding: 0px;
@@ -609,17 +600,13 @@ li:hover {
 }
 
 
-
 span.close {
     color: red;
     font-size: 37px;
-    position: relative;
-    margin-top: 10px;
-    left: -12px;
     background-color: #fff5f5;
+    background: transparent;
+    cursor: pointer;
 }
-
-
 
 .popup {
 
@@ -703,6 +690,12 @@ span.close {
     margin: 15px;
 }
 
+#message {
+    font-size: 1.2em;
+    color: green;
+    transition: none 0.3s ease;
+}
+
 @media (min-width: 1px) and (max-width: 320px) {
 
     .logoHeader {
@@ -737,12 +730,12 @@ span.close {
         top: 0px;
         width: 100%;
         z-index: 1000;
-        background-color: #f1f1f1;
+        background-color: #ffffff;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .gridProducts {
-        background-color: #f1f1f1;
+        background-color: #ffffff;
         padding: 5px;
         border: 1px solid #ddd;
         cursor: pointer;
