--- a/docs/style.css
+++ b/docs/style.css
@@ -931,3 +931,8 @@ span.close {
     }
 }
 
+
+.sticky-container {
+    overflow-x: auto; /* Permite a rolagem horizontal */
+    white-space: nowrap; /* Impede que os elementos quebrem em múltiplas linhas */
+}
